--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
   --header-height: 3rem;
 
   /*========== Colors ==========*/
-  --beige-hue: 40;
+  /* Change favorite color */
+  --hue-color: 225;
   /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
   /* HSL color mode */
@@ -575,13 +576,13 @@ img {
 /*==================== QUALIFICATION ====================*/
 
 
-/*==================== EXPERIENCES ====================*/
-.experiences__container {
+/*==================== SERVICES ====================*/
+.services__container {
   gap: 1.5rem;
   grid-template-columns: repeat(2, 1fr);
 }
 
-.experiences__content {
+.services__content {
   position: relative;
   background-color: var(--container-color);
   padding: 3.5rem .5rem 1.25rem 1.5rem;
@@ -590,33 +591,33 @@ img {
   transition: .3s;
 }
 
-.experiences:hover {
+.services:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, .15);
 }
 
-.experiences__icon {
+.services__icon {
   display: block;
   font-size: 1.5rem;
   color: var(--first-color);
   margin-bottom: var(--mb-1);
 }
 
-.experiences__title {
+.services__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
   font-weight: var(--font-medium);
 }
 
-.experiences__button {
+.services__button {
   cursor: pointer;
   font-size: var(--small-font-size);
 }
 
-.experiences__button:hover .button__icon {
+.services__button:hover .button__icon {
   transform: translateX(.25rem);
 }
 
-.experiences__modal {
+.services__modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -633,28 +634,28 @@ img {
   transition: .3s;
 }
 
-.experiences__modal-content {
+.services__modal-content {
   position: relative;
   background-color: var(--container-color);
   padding: 1.5rem;
   border-radius: .5rem;
 }
 
-.experiences__modal-experiences {
+.services__modal-services {
   row-gap: 1rem;
 }
 
-.experience__modal-experience {
+.service__modal-service {
   display: flex;
 }
 
-.experiences__modal-title {
+.services__modal-title {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-1-5);
 }
 
-.experiences__modal-close {
+.services__modal-close {
   position: absolute;
   top: 1rem;
   right: 1rem;
@@ -663,7 +664,7 @@ img {
   cursor: pointer;
 }
 
-.experiences__modal-icon {
+.services__modal-icon {
   color: var(--first-color);
   margin-right: var(--mb-0-25);
 }
@@ -674,31 +675,31 @@ img {
   visibility: visible;
 }
 
-/*==================== PROJECT ====================*/
-.project__container {
+/*==================== PORTFOLIO ====================*/
+.portfolio__container {
   overflow: initial;
 }
 
-.project__content {
+.portfolio__content {
   padding: 0 1.5rem;
 }
 
-.project__img {
+.portfolio__img {
   width: 265px;
   border-radius: .5rem;
   justify-self: center;
 }
 
-.project__title {
+.portfolio__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-0-5);
 }
 
-.project__description {
+.portfolio__description {
   margin-bottom: var(--mb-0-75);
 }
 
-.project__button:hover .button__icon {
+.portfolio__button:hover .button__icon {
   transform: translateX(.25rem);
 }
 
@@ -707,7 +708,7 @@ img {
   content: '';
 }
 
-.swiper-project-icon {
+.swiper-portfolio-icon {
   font-size: 2rem;
   color: var(--first-color);
 }
@@ -980,16 +981,16 @@ footer .footer__social a:hover {
     font-size: var(--normal-font-size);
   }
 
-  .experiences__container {
+  .services__container {
     grid-template-columns: max-content;
     justify-content: center;
   }
 
-  .experiences__content {
+  .services__content {
     padding-right: 3.5rem;
   }
 
-  .experiences__modal {
+  .services__modal {
     padding: 0 .5rem;
   }
 
@@ -1035,7 +1036,7 @@ footer .footer__social a:hover {
 
   .about__container,
   .skills__container,
-  .project__content,
+  .portfolio__content,
   .project__container,
   .contact__container,
   .footer__container {
@@ -1137,20 +1138,20 @@ footer .footer__social a:hover {
     justify-content: initial;
   }
 
-  .experiences__container {
+  .services__container {
     grid-template-columns: repeat(3, 218px);
     justify-content: center;
   }
 
-  .experiences__icon {
+  .services__icon {
     font-size: 2rem;
   }
 
-  .experiences__content {
+  .services__content {
     padding: 6rem 0 2rem 2.5rem;
   }
 
-  .experiences__modal-content {
+  .services__modal-content {
     width: 450px;
   }
 
@@ -1158,11 +1159,11 @@ footer .footer__social a:hover {
     visibility: hidden;
   }
 
-  .project__img {
+  .portfolio__img {
     width: 320px;
   }
 
-  .project__content {
+  .portfolio__content {
     align-items: center;
   }
 
@@ -1227,7 +1228,7 @@ footer .footer__social a:hover {
     transform: translateX(-6rem);
   }
 
-  .experiences__container {
+  .services__container {
     grid-template-columns: repeat(3, 238px);
   }
 
@@ -1235,11 +1236,11 @@ footer .footer__social a:hover {
     visibility: visible;
   }
 
-  .project__content {
+  .portfolio__content {
     column-gap: 5rem;
   }
 
-  .swiper-project-icon {
+  .swiper-portfolio-icon {
     font-size: 3.5rem;
   }
 
